crates/rome_formatter/tests/specs/prettier/js/export-extension/export.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 144
expression: export.js

---
# Input
```js
export * as ns from 'mod';
export v from 'mod';
export a, * as b from 'mod';
export c, { foo } from 'mod';
export * as d, { bar } from 'mod';
export { fooooooooooooooooooooooooooooooooooooooooooooooooo } from "fooooooooooooooooooooooooooooo";
export Bar, { barrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr } from "barrrrrrrrrrrrrrrrrrrrrrrrrrrr";
export { foooooooooooooooooooooooooooooooooooooooooooooo, fooooooooooooooooooooooooooooooooooooooooooooooo  } from "fooooooooooooooooooooooooooooo";

```

# Output
```js
export * as ns from 'mod';
export
v;
from;
"mod";
export
a, * as
b;
from;
"mod";
export
c, { foo };
from;
"mod";
export * as d
,
{
  bar;
}
from;
"mod";
export { fooooooooooooooooooooooooooooooooooooooooooooooooo } from "fooooooooooooooooooooooooooooo";
export
Bar, { barrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr };
from;
"barrrrrrrrrrrrrrrrrrrrrrrrrrrr";
export {
  foooooooooooooooooooooooooooooooooooooooooooooo,
  fooooooooooooooooooooooooooooooooooooooooooooooo,
} from "fooooooooooooooooooooooooooooo";

```

# Errors
```
error[SyntaxError]: expected `*` but instead found `v`
  ┌─ export.js:2:8
  │
2 │ export v from 'mod';
  │        ^ unexpected

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ export.js:2:10
  │
2 │ export v from 'mod';
  │        --^^^^
  │        │ │
  │        │ An explicit or implicit semicolon is expected here...
  │        ...Which is required to end this statement

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ export.js:2:15
  │
2 │ export v from 'mod';
  │          -----^^^^^
  │          │    │
  │          │    An explicit or implicit semicolon is expected here...
  │          ...Which is required to end this statement

error[SyntaxError]: expected a class, a function, or a variable declaration but instead found 'a'
  ┌─ export.js:3:8
  │
3 │ export a, * as b from 'mod';
  │        ^ Expected a class, a function, or a variable declaration here

error[SyntaxError]: Expected an expression for the left hand side of the `*` operator.
  ┌─ export.js:3:11
  │
3 │ export a, * as b from 'mod';
  │           ^ This operator requires a left hand side value

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ export.js:3:16
  │
3 │ export a, * as b from 'mod';
  │        --------^
  │        │       │
  │        │       An explicit or implicit semicolon is expected here...
  │        ...Which is required to end this statement

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ export.js:3:18
  │
3 │ export a, * as b from 'mod';
  │                --^^^^
  │                │ │
  │                │ An explicit or implicit semicolon is expected here...
  │                ...Which is required to end this statement

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ export.js:3:23
  │
3 │ export a, * as b from 'mod';
  │                  -----^^^^^
  │                  │    │
  │                  │    An explicit or implicit semicolon is expected here...
  │                  ...Which is required to end this statement

error[SyntaxError]: expected a class, a function, or a variable declaration but instead found 'c'
  ┌─ export.js:4:8
  │
4 │ export c, { foo } from 'mod';
  │        ^ Expected a class, a function, or a variable declaration here

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ export.js:4:19
  │
4 │ export c, { foo } from 'mod';
  │        -----------^^^^
  │        │          │
  │        │          An explicit or implicit semicolon is expected here...
  │        ...Which is required to end this statement

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ export.js:4:24
  │
4 │ export c, { foo } from 'mod';
  │                   -----^^^^^
  │                   │    │
  │                   │    An explicit or implicit semicolon is expected here...
  │                   ...Which is required to end this statement

error[SyntaxError]: expected `from` but instead found `,`
  ┌─ export.js:5:14
  │
5 │ export * as d, { bar } from 'mod';
  │              ^ unexpected

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ export.js:5:29
  │
5 │ export * as d, { bar } from 'mod';
  │                        -----^^^^^
  │                        │    │
  │                        │    An explicit or implicit semicolon is expected here...
  │                        ...Which is required to end this statement

error[SyntaxError]: expected a class, a function, or a variable declaration but instead found 'Bar'
  ┌─ export.js:7:8
  │
7 │ export Bar, { barrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr } from "barrrrrrrrrrrrrrrrrrrrrrrrrrrr";
  │        ^^^ Expected a class, a function, or a variable declaration here

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ export.js:7:63
  │
7 │ export Bar, { barrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr } from "barrrrrrrrrrrrrrrrrrrrrrrrrrrr";
  │        -------------------------------------------------------^^^^
  │        │                                                      │
  │        │                                                      An explicit or implicit semicolon is expected here...
  │        ...Which is required to end this statement

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ export.js:7:68
  │
7 │ export Bar, { barrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr } from "barrrrrrrrrrrrrrrrrrrrrrrrrrrr";
  │                                                               -----^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  │                                                               │    │
  │                                                               │    An explicit or implicit semicolon is expected here...
  │                                                               ...Which is required to end this statement


```


